切り替えボタン
お気に入りとレビュー一覧をプロフィールに表示。

--- a/app/views/users/_like.html.haml
+++ b/app/views/users/_like.html.haml
@@ -1,6 +1,6 @@
-.card
-  - @likes.each do |review|
-    = link_to review_path(review) do
+- @likes.each do |review|
+  .card
+    = link_to review_path(review.review) do
       .card-content
         = image_tag review.review.images[0].image.url,class:"card-content__image"
         %h2.card-content__title
