--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,58 +1,59 @@
+<%= render "component/header"%>
+
+<div class="form-wrapper">
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true %>
+    <%= f.label :name, class:"field__label" %><br />
+    <%= f.text_field :name, autofocus: true, class:"field__input" %>
   </div>
 
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :PSN_id %><br />
-    <%= f.text_field :PSN_id, autofocus: true %>
+    <%= f.label :profile, class:"field__label" %><br />
+    <%= f.text_field :profile, autofocus: true, class:"field__input" %>
   </div>
 
   <div class="field">
-    <%= f.label :friend_code %><br />
-    <%= f.text_field :friend_code, autofocus: true %>
+    <%= f.label :PSN_id, class:"field__label" %><br />
+    <%= f.text_field :PSN_id, autofocus: true, class:"field__input" %>
   </div>
 
   <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+    <%= f.label :friend_code, class:"field__label" %><br />
+    <%= f.text_field :friend_code, autofocus: true, class:"field__input" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :email, class:"field__label" %><br />
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", class:"field__input" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :password, class:"field__label" %> <i>(leave blank if you don't want to change it)</i><br />
+    <%= f.password_field :password, autocomplete: "new-password", class:"field__input" %>
     <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
     <% end %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    <%= f.label :password_confirmation, class:"field__label" %><br />
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", class:"field__input" %>
   </div>
 
   <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
+    <%= f.label :current_password, class:"field__label" %> <i>(we need your current password to confirm your changes)</i><br />
+    <%= f.password_field :current_password, autocomplete: "current-password", class:"field__input" %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Update" %>
+    <%= f.submit "Update", class:"sign__btn" %>
   </div>
 <% end %>
-
-<h3>Cancel my account</h3>
 
 <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
 <%= link_to "Back", :back %>
+</div>
