--- a/app/views/reviews/_review.html.haml
+++ b/app/views/reviews/_review.html.haml
@@ -23,11 +23,12 @@
       %h4.card-content__category
       - review.categories.each do |category|
         = category.name
-    .btn-box
-      .edit-btn
-        = link_to '編集', edit_review_path(review)
-      .delete-btn
-        = link_to '削除', review_path(review), method: :delete
+      .btn-box
+        - if current_user.id == review.user.id
+          .edit-btn
+            = link_to '編集', edit_review_path(review)
+          .delete-btn
+            = link_to '削除', review_path(review), method: :delete
     .card-user
       = review.user.name
       %div{:id => "likes_buttons_#{review.id}"}
