--- a/app/views/reviews/_review.html.haml
+++ b/app/views/reviews/_review.html.haml
@@ -30,6 +30,6 @@
           .delete-btn
             = link_to '削除', review_path(review), method: :delete
     .card-user
-      = review.user.name
+      = link_to review.user.name, user_path(review.user.id)
       %div{:id => "likes_buttons_#{review.id}"}
         = render partial: 'likes/like', locals: { review: review, likes: @likes}
