--- a/app/assets/stylesheets/youtubes.scss
+++ b/app/assets/stylesheets/youtubes.scss
@@ -1,3 +1,21 @@
 .youtube{
   padding:6rem;
+  &-search{
+    width:100%;
+    display:flex;
+    height: 2.5rem;
+    margin-top: 10px;
+    &__input{
+      width: 50%;
+      font-size: 18px;
+      background-color: white;
+      border: solid 1px gray;
+    }
+  }
+  &-result{
+    margin-top: 2rem;
+    &__box{
+      margin-top: 2rem;
+    }
+  }
 }
