楽天検索マークアップ

--- a/app/assets/stylesheets/component/_btn.scss
+++ b/app/assets/stylesheets/component/_btn.scss
@@ -46,3 +46,13 @@
     width:56%;
   }
 }
+
+.rakuten-btn{
+  padding:0.5rem;
+  background-color: rgb(218, 25, 176);
+  border-radius: 0.3rem;
+  cursor: pointer;
+  color: white;
+  float:right;
+  height: 2.5rem;
+}
