--- a/app/views/reviews/rakuten_search.html.haml
+++ b/app/views/reviews/rakuten_search.html.haml
@@ -21,3 +21,6 @@
             %img{:src => "#{item['smallImageUrls'][0]}"}/
   = link_to root_path do
     トップへ
+              %img{:src => "#{item['smallImageUrls'][0]}", :height => "80", :width => "100"}/
+= link_to root_path do
+  トップへ
