--- a/app/views/reviews/rakuten_search.html.haml
+++ b/app/views/reviews/rakuten_search.html.haml
@@ -1,26 +1,28 @@
-%h1 楽天でゲームを検索する
-= form_tag rakuten_search_reviews_path, method: :get do
-  = label_tag :keyword, 'キーワード検索'
-  = text_field_tag 'keyword', params[:keyword]
-  = submit_tag "検索"
-%table
-  %thead
-    %tr
-      %th 商品名
-      %th 価格
-      %th 画像
-  %tbody
-    - if @items.present?
-      - @items.each do |item|
-        %tr
-          %td= link_to item.name, "#{item.url}"
-          %td{:align => "right"}
-            = number_with_delimiter(item.price)
-            円
-          %td
-            %img{:src => "#{item['smallImageUrls'][0]}"}/
-  = link_to root_path do
-    トップへ
+= render 'component/header'
+
+.rakuten
+  %h1 楽天でゲームを検索する
+  .rakuten-search
+    = form_tag rakuten_search_reviews_path, method: :get do
+      = text_field_tag 'keyword', params[:keyword],placeholder: "商品名で検索",class:"rakuten-search__input"
+      .rakuten-btn
+        %i.fas.fa-search
+        = submit_tag "検索",class:"rakuten-btn__on"
+  %table
+    %thead
+      %tr
+        %th 商品名
+        %th 価格
+        %th 画像
+    %tbody
+      - if @items.present?
+        - @items.each do |item|
+          %tr
+            %td= link_to item.name, "#{item.url}"
+            %td{:align => "right"}
+              = number_with_delimiter(item.price)
+              円
+            %td
               %img{:src => "#{item['smallImageUrls'][0]}", :height => "80", :width => "100"}/
 = link_to root_path do
   トップへ
