検索ボタンの配色変更

--- a/app/assets/stylesheets/component/_btn.scss
+++ b/app/assets/stylesheets/component/_btn.scss
@@ -27,8 +27,8 @@
   padding-top:1rem;
   color: white;
   &__on{
-  background-color: #3CCACE;
-  border: solid 1px #3CCACE;
+  background-color: rgb(60, 70, 206);
+  border: solid 1px rgb(60, 70, 206);
   border-radius: 2rem;
   width: 90%;
   font-size: 20px;
