--- a/app/assets/stylesheets/review/_search.scss
+++ b/app/assets/stylesheets/review/_search.scss
@@ -72,8 +72,8 @@
   }
   &__btn{
     margin-top: 10px;
-    background-color: #3CCACE;
-    border: solid 1px #3CCACE;
+    background-color: rgb(60, 70, 206);
+    border: solid 1px rgb(60, 70, 206);
     border-radius: 0.6rem;
     width: 30%;
     font-size: 20px;
