--- a/app/assets/stylesheets/component/_btn.scss
+++ b/app/assets/stylesheets/component/_btn.scss
@@ -1,5 +1,8 @@
 .btn-box{
   display:flex;
+  padding:1rem;
+  width:20%;
+  text-decoration: none;
 }
 
 .edit-btn{
@@ -9,6 +12,7 @@
 }
 
 .delete-btn{
+  margin-left:1rem;
   padding:0.5rem;
   background-color: rgb(205, 55, 50);
   border-radius: 0.3rem;
