--- a/app/assets/stylesheets/component/_card.scss
+++ b/app/assets/stylesheets/component/_card.scss
@@ -34,5 +34,12 @@
     display: flex;
     justify-content: space-between;
     height: 2rem;
+    &__count{
+      display:flex;
+    }
+    &__comment-count{
+      color:black;
+      padding-left:0.4rem;
+    }
   }
 }
